Upgrade to Spark 3.5 + ANSI mode